--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -5,11 +5,21 @@ $stark-light-blue: #00fffc;
 $stark-med-blue: #00a4a2;
 
 .login {
-  animation: logo-entry 4s ease-in; 
-  width: 500px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 40;
+  background: #000;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  &__header {
+    animation: logo-entry 4s ease-in; 
+    width: 169px;
+    margin: 200px auto 0;
+    position: relative;
+    z-index: 40;
+
+  }
+  
+  
 
   h1 {
     animation: text-glow 2s ease-out infinite alternate;
@@ -156,9 +166,8 @@ $stark-med-blue: #00a4a2;
       top: 1px; 
     }
   } 
-    
-    
-    
+         
+} 
     
       
   
@@ -181,7 +190,8 @@ $stark-med-blue: #00a4a2;
     margin-left: -250px;
     overflow: hidden;
     opacity: 0.4;
-    z-index: -3; 
+    margin-top: 200px;
+    // z-index: -3; 
   }
   
   #inner-cirlce1 {
@@ -229,10 +239,10 @@ $stark-med-blue: #00a4a2;
     top: 310px; 
     width: 100%;
     transform: perspective(600px) rotateX(60deg) scale(1.4);
-    z-index: -3;
+    margin-top: 200px;
+    // z-index: -3;
   }
-  
-}
+
 
 /* =========================================
 Animation Keyframes
@@ -355,10 +365,10 @@ Animation Keyframes
 
 @keyframes circle1 {
   0% {
-    @include rotate (0deg);
+    transform: rotate(0deg);
   } 
   
   100% {
-    @include rotate (360deg);
+    transform: rotate(360deg);
   }
 }
