--- a/src/components/HeaderNav/index.scss
+++ b/src/components/HeaderNav/index.scss
@@ -3,22 +3,45 @@
     min-height: 50px;
   }
 
+  @at-root .menuList {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    & >li {
+      list-style: none;
+      margin-right: 60px;
+      font-size: 13px;
+      color: #132144;
+    }
+  }
+
   &__wrap {
     display: flex;
     align-items: center;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 64px;
     padding: 0 20px;
-    background: #333;
+    background: #fff;
+    box-shadow: 0 2px 8px #f0f1f2;
     z-index: 999;
 
     .logo {
-      height: 30px;
-      color: #fff;
-      line-height: 30px;
+      height: 64px;
+      overflow: hidden;
+      color: rgba(0,0,0,.85);
       font-size: 18px;
-      font-weight: bold;
+      font-family: Avenir,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji,sans-serif;
+      line-height: 64px;
+      white-space: nowrap;
+      text-decoration: none;
+
+      & > .logoImage {
+        position: relative;
+        top: 9px;
+        height: 32px;
+        margin-right: 16px;
+      }
     }
 
     .info {
